--- a/app/assets/stylesheets/location_form.css
+++ b/app/assets/stylesheets/location_form.css
@@ -6,6 +6,7 @@
 .locations {
   display: block;
   margin-top: 150px;
+  margin-bottom: 400px;
 }
 
 .locations ul {
